--- a/Doc/Pranesimas.tex
+++ b/Doc/Pranesimas.tex
@@ -201,8 +201,8 @@ Klasė išskirstyta į 3 subklases: \texttt{SelectedEE\_t}, \texttt{SelectedMuMu
 \end{frame}
 
 
-\begin{frame}[allowframebreaks]
-\frametitle{Įvykių atranka}
+\begin{frame}
+\frametitle{Įvykių atranka I}
 
 \begin{itemize}
 	\item $\ee$ atranka:
@@ -213,6 +213,15 @@ Klasė išskirstyta į 3 subklases: \texttt{SelectedEE\_t}, \texttt{SelectedMuMu
 		\item $|\etaSC|<2.4$ ir $1.4442<|\etaSC|<1.566$;
 		\item 2 išvardintus kriterijus atitinkantys elektronai, kurių $\mathit{m}_{\mathrm{inv}}>10$ \GeV.
 	\end{itemize}
+\end{itemize}
+
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Įvykių atranka II}
+
+\begin{itemize}
 	\item $\mu\mu$ atranka:
 	\begin{itemize}
 		\item Trigeris \texttt{IsoMu24} arba \texttt{IsoTkMu24};
@@ -224,6 +233,19 @@ Klasė išskirstyta į 3 subklases: \texttt{SelectedEE\_t}, \texttt{SelectedMuMu
 		\item \texttt{vtxTrkChi2/Ndof<20};
 		\item Kampas tarp miuonų \texttt{Inner} keturmačio impulso vektorių $\alpha<\pi-0.005$.
 	\end{itemize}
+\end{itemize}
+
+\begin{center}
+	\includegraphics[width=0.6\textwidth]{isHighPtMuon.JPG}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Įvykių atranka III}
+
+\begin{itemize}
 	\item $\emu$ atranka:
 	\begin{itemize}
 		\item Trigeris \texttt{IsoMu24} arba \texttt{IsoTkMu24};
