More additions to semester work's text

--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -196,3 +196,38 @@
   year    = {2017},
   howpublished = {JINST 12 P10003, DOI: 10.1088/1748-0221/12/10/P10003}
 }
+
+@misc{PDF0,
+  author  = {Ringailė Plačakytė},
+  title   = {{Parton Distribution Functions}},
+  year    = {2011},
+  howpublished = {arXiv:1111.5452 [hep-ph]}
+}
+
+@inproceedings{Placakyte:2011az,
+      author         = "Placakyte, Ringaile",
+      title          = "{Parton Distribution Functions}",
+      booktitle      = {{Proceedings, PIC 2011: Vancouver, Canada, August
+                        28-September 1, 2011}},
+      year           = "2011",
+      eprint         = "1111.5452",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1111.5452;%%"
+}
+
+@article{HiggsEX,
+  title = {Measurement of the Higgs boson mass from the $H\ensuremath{\rightarrow}\ensuremath{\gamma}\ensuremath{\gamma}$ and $H\ensuremath{\rightarrow}Z{Z}^{*}\ensuremath{\rightarrow}4\ensuremath{\ell}$ channels in $pp$ collisions at center-of-mass energies of 7 and 8 TeV with the ATLAS detector},
+  author = {Aad et al. (ATLAS Collaboration), G.},
+  collaboration = {ATLAS Collaboration},
+  journal = {Phys. Rev. D},
+  volume = {90},
+  issue = {5},
+  pages = {052004},
+  numpages = {35},
+  year = {2014},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.90.052004},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.90.052004}
+}
